[gd_scene load_steps=4 format=3 uid="uid://3ulaelo52igh"]

[ext_resource type="Script" path="res://scenes/spell.gd" id="1_7m3yd"]
[ext_resource type="Texture2D" uid="uid://cw1uha42coljt" path="res://art/spell.png" id="2_cgo36"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lsrix"]
radius = 22.0
height = 44.0

[node name="spell" type="CharacterBody2D"]
script = ExtResource("1_7m3yd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_lsrix")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-1, 0.5)
scale = Vector2(2.5, 3.05)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_lsrix")

[node name="Spell" type="Sprite2D" parent="."]
position = Vector2(3, -4)
scale = Vector2(0.67, 0.705)
texture = ExtResource("2_cgo36")

[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
